try to fix layout shift dashboard

--- a/staticfiles/css/dashboard.css
+++ b/staticfiles/css/dashboard.css
@@ -1,4 +1,5 @@
 /* Profile Box */
+
 .avatar-box {
     text-align: center;
     padding-bottom: 10px;
@@ -16,9 +17,9 @@
     overflow: hidden;
 }
 
-.profile-box img {
-    width: 100%;
-    height: 100%;
+#user-avatar {
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 10px;
 }
